Fix responsive layout on mobile devices

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,13 @@
 <footer>
-	copyright &copy 2024 dylan beattie. published under the gnu free documentation license.
+	<div>
+	<span>
+		<a href="https://freeasinweekend.org">freeasinweekend.org</a>
+		is &copy;
+		<a href="https://dylanbeattie.net/">Dylan Beattie</a> 2024.
+		</span>
+		<span>
+		Licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1">CC-BY-SA 4.0</a>
+	</span>
+	<span>code on <a href="https://github.com/dylanbeattie/freeasinweekend.org">github</a></span>
+	</div>
 </footer>
