--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,8 @@
 	</a></h1>
 	<nav>
 	<a href="/">home</a>
-	<a href="/open-source-open-mind">transcript</a>
-	<a href="/calculations">the numbers</a>
+	<a href="/open-source-open-mind">the talk</a>
+	<a href="/calculations">numbers</a>
 	<a href="/sources">sources</a>
 	</nav>
 </header>
